# colord-gtk

./: Makefile.am  NEWS  README  RELEASE  autogen.sh  colord-gtk.doap  configure.ac  meson.build  meson_options.txt
client/: Makefile.am  cd-convert.c  meson.build
contrib/: colord-gtk.spec.in
doc/api/: Makefile.am  colord-gtk-docs.xml  meson.build
libcolord-gtk/: Makefile.am  cd-sample-widget-gtk4.c  cd-sample-widget.c  cd-sample-widget.h  cd-sample-window-gtk4.c  cd-sample-window.c  cd-sample-window.h  cd-self-test-gtk4.c  cd-self-test.c  cd-version.h.in  cd-window-sync.c  cd-window-sync.h  cd-window.c  cd-window.h  colord-gtk.h  colord-gtk2.pc.in  meson.build
man/: Makefile.am  cd-convert.sgml  cd-convert.xml  meson.build
po/: LINGUAS  Makevars  POTFILES.in  en_GB.po  ka.po  meson.build
