option('gtk2', type : 'boolean', value : false, description : 'Build Gtk2 library')
option('vapi', type : 'boolean', value : false, description : 'Build vala bindings')
option('tests', type : 'boolean', value : true, description : 'Build self tests')
option('man', type : 'boolean', value : true, description : 'Generate man pages')
option('docs', type : 'boolean', value : true, description : 'Generate documentation')
